Added Extension for API manager for Checklist APIs

--- a/PostSafety/PostSafety/Storyboards/Base.lproj/Authentication.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Base.lproj/Authentication.storyboard
@@ -23,7 +23,7 @@
         <!--Log In View Controller-->
         <scene sceneID="WgU-2f-8Se">
             <objects>
-                <viewController storyboardIdentifier="LogInViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="gbS-2y-xEM" customClass="PSLogInViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSLogInViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="gbS-2y-xEM" customClass="PSLogInViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ced-fU-zGS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -357,23 +357,23 @@
                                                 <rect key="frame" x="0.0" y="167" width="375" height="166.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aln-4x-N7n" userLabel="Container">
-                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="166.5"/>
+                                                        <rect key="frame" x="0.0" y="0.5" width="375" height="166.5"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="JU9-aW-1t0" userLabel="TextFields Stack View">
-                                                                <rect key="frame" x="62.5" y="0.0" width="250" height="166.5"/>
+                                                                <rect key="frame" x="62.5" y="0.5" width="250" height="166.5"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0h6-Ja-nn4" userLabel="Username Container">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="250" height="48.5"/>
+                                                                        <rect key="frame" x="0.0" y="0.5" width="250" height="48.5"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3cO-6e-A76">
-                                                                                <rect key="frame" x="8.5" y="7" width="233.5" height="34"/>
+                                                                                <rect key="frame" x="8.5" y="7.5" width="233.5" height="34"/>
                                                                                 <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                                 <userDefinedRuntimeAttributes>
                                                                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="2"/>
                                                                                 </userDefinedRuntimeAttributes>
                                                                             </view>
                                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vVj-xO-ztB">
-                                                                                <rect key="frame" x="16.5" y="15" width="217.5" height="18"/>
+                                                                                <rect key="frame" x="16.5" y="15.5" width="217.5" height="18"/>
                                                                                 <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                                                 <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="15"/>
                                                                                 <textInputTraits key="textInputTraits"/>
@@ -396,7 +396,7 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YL3-yt-Fkt" userLabel="Password Container">
-                                                                        <rect key="frame" x="0.0" y="58.5" width="250" height="49"/>
+                                                                        <rect key="frame" x="0.0" y="59" width="250" height="49"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qwj-am-TjM">
                                                                                 <rect key="frame" x="8.5" y="7" width="233.5" height="34"/>
@@ -429,7 +429,7 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qza-8D-tnT" userLabel="Next Container">
-                                                                        <rect key="frame" x="0.0" y="117.5" width="250" height="49"/>
+                                                                        <rect key="frame" x="0.0" y="118" width="250" height="49"/>
                                                                         <subviews>
                                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s77-q2-Glg">
                                                                                 <rect key="frame" x="4.5" y="2.5" width="240" height="44"/>
@@ -552,7 +552,7 @@
         <!--Navigation Controller-->
         <scene sceneID="gJA-4Y-goU">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="rBB-Oj-bJX" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="PSLogInNavigationController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" navigationBarHidden="YES" id="rBB-Oj-bJX" sceneMemberID="viewController">
                     <toolbarItems/>
                     <nil key="simulatedTopBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wFS-DK-Bol">
