Authentication storyboard updated

--- a/PostSafety/PostSafety/Storyboards/Base.lproj/Authentication.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Base.lproj/Authentication.storyboard
@@ -206,7 +206,7 @@
                                                                     </view>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xKO-I4-OZP">
                                                                         <rect key="frame" x="-5" y="0.0" width="240" height="44"/>
-                                                                        <color key="backgroundColor" red="0.78823529410000004" green="0.78823529410000004" blue="0.78823529410000004" alpha="1" colorSpace="calibratedRGB"/>
+                                                                        <color key="backgroundColor" red="1" green="0.29411764705882354" blue="0.0039215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="height" constant="44" id="YaW-rt-Yfv"/>
                                                                             <constraint firstAttribute="width" constant="240" id="r3R-bF-M5c"/>
