Implemeted some APIs: Checklists, ChecklistsDetails, UpdateEmployees

--- a/PostSafety/PostSafety/Storyboards/Base.lproj/Authentication.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Base.lproj/Authentication.storyboard
@@ -307,10 +307,10 @@
             </objects>
             <point key="canvasLocation" x="1855.2" y="34.729064039408868"/>
         </scene>
-        <!--Dashboard-->
+        <!--PSDashboardViewController-->
         <scene sceneID="NZJ-Zy-5P4">
             <objects>
-                <viewControllerPlaceholder storyboardName="Dashboard" id="SzT-ZZ-ulS" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Dashboard" referencedIdentifier="PSDashboardViewController" id="SzT-ZZ-ulS" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="PlZ-na-NQC"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n32-de-p3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -357,13 +357,13 @@
                                                 <rect key="frame" x="0.0" y="167" width="375" height="166.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aln-4x-N7n" userLabel="Container">
-                                                        <rect key="frame" x="0.0" y="0.5" width="375" height="166.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="166.5"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="JU9-aW-1t0" userLabel="TextFields Stack View">
                                                                 <rect key="frame" x="62.5" y="0.5" width="250" height="166.5"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0h6-Ja-nn4" userLabel="Username Container">
-                                                                        <rect key="frame" x="0.0" y="0.5" width="250" height="48.5"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="250" height="48.5"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3cO-6e-A76">
                                                                                 <rect key="frame" x="8.5" y="7.5" width="233.5" height="34"/>
@@ -396,7 +396,7 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YL3-yt-Fkt" userLabel="Password Container">
-                                                                        <rect key="frame" x="0.0" y="59" width="250" height="49"/>
+                                                                        <rect key="frame" x="0.0" y="58.5" width="250" height="49"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qwj-am-TjM">
                                                                                 <rect key="frame" x="8.5" y="7" width="233.5" height="34"/>
@@ -429,7 +429,7 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qza-8D-tnT" userLabel="Next Container">
-                                                                        <rect key="frame" x="0.0" y="118" width="250" height="49"/>
+                                                                        <rect key="frame" x="0.0" y="117.5" width="250" height="49"/>
                                                                         <subviews>
                                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s77-q2-Glg">
                                                                                 <rect key="frame" x="4.5" y="2.5" width="240" height="44"/>
